did-some-database-calls

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.7",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -24,10 +25,13 @@
     "firebase": "^11.2.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "openai": "^4.83.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
